force-app/main/default/objects/SFDC_Offer__c/SFDC_Offer__c.object-meta.xml
<CustomObject>
    <description>Track Offers from internal resource, or bids from external partners, to work on specific Projects.</description>
    <label>Offer</label>
    <nameField>
        <displayFormat>Offer {000}</displayFormat>
        <label>Offer#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>