force-app/main/default/objects/SFDC_Offer__c/fields/Accepted__c.field-meta.xml
<CustomField>
    <fullName>Accepted__c</fullName>
    <label>Accepted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>On deck</fullName>
            </value>
            <value>
                <fullName>No thank you</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>