force-app/main/default/objects/SFDC_Offer__c/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <label>Availability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fully Engaged</fullName>
            </value>
            <value>
                <fullName>Limited Engagement</fullName>
            </value>
            <value>
                <fullName>Provide Insight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>