force-app/main/default/objects/SFDC_Offer__c/fields/Billing_Rate_Available__c.field-meta.xml
<CustomField>
    <fullName>Billing_Rate_Available__c</fullName>
    <label>Billing Rate Available</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>