force-app/main/default/objects/SFDC_Offer__c/fields/of_resource_available__c.field-meta.xml
<CustomField>
    <fullName>of_resource_available__c</fullName>
    <label># of resource available</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>