force-app/main/default/objects/SFDC_Offer__c/fields/Projects__c.field-meta.xml
<CustomField>
    <fullName>Projects__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>SFDC_Projects__c</referenceTo>
    <relationshipName>R00N60000001VqpqEAC</relationshipName>
    <type>Lookup</type>
</CustomField>