force-app/main/default/objects/SFDC_Offer__c/fields/Travel__c.field-meta.xml
<CustomField>
    <fullName>Travel__c</fullName>
    <label>Travel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No restrictions</fullName>
            </value>
            <value>
                <fullName>Some restrictions</fullName>
            </value>
            <value>
                <fullName>Cannot travel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>