force-app/main/default/objects/SFDC_Offer__c/listViews/AllOffers.listView-meta.xml
<ListView>
    <fullName>AllOffers</fullName>
    <columns>Projects__c</columns>
    <columns>Resource__c</columns>
    <columns>Availability__c</columns>
    <columns>Comments__c</columns>
    <columns>Accepted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Offers</label>
</ListView>